Prevent jumping content when loading mask is added to the form

--- a/web/css/base/_form.less
+++ b/web/css/base/_form.less
@@ -57,7 +57,8 @@ button,
     fieldset,
     .fieldset {
         margin-bottom: @8;
-        &:last-child {
+        &:last-child,
+        + .loading-mask:last-child {
             margin-bottom: 0;
         }
         &.field {
